# discord-bot

./: .env.sample  README.md  package-lock.json  package.json  pyproject.toml
split_the_bill/: Pipfile  README.md
split_the_bill/samples/: app_command_sample.py  basic1_sample.py  basic2_sample.py
